# fins-agent

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  QUICKSTART.md  QWEN.md  README.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.claude/exemplars/: INDEX.md
.claude/rules/: latex-citations.md  latex-conventions.md  presentation-rules.md  word-reporting.md
.codex/: config.toml
.gemini/commands/: audit-app.toml  build-app.toml  build-context.toml  build-deck.toml  build-figure.toml  build-paper.toml  build-week-context.toml  edit-section.toml  latex-doctor.toml  new-project.toml  onboard.toml  outline.toml  proofread.toml  scaffold-week.toml  setup-paper.toml  word-report.toml  write-section.toml
.github/workflows/: ci.yml  submission-check.yml
.qwen/: settings.json
boilerplate/: template_main.tex  template_references.bib  template_slides.tex
docs/ai/: CONTEXT_AUDIT.md  claude-pycharm.md  claude.md  code-review.md  codex-pycharm.md  codex.md  core.md  gemini-pycharm.md  gemini.md  opencode-pycharm.md  qwen-pycharm.md  qwen.md  start-here.md  writing.md
docs/setup/: ai-support-matrix.md  ai-troubleshooting.md  latex.md  macos.md  pycharm.md  troubleshooting.md  windows.md
fins2026/: AGENTS.md
fins2026/week0/: README.md  (+2 more)
projects/: AGENTS.md
tests/: conftest.py  test_ai_repo_surfaces.py  test_ai_surfaces.py  test_apps.py  test_figures.py  test_imports.py  test_setup_student.py  test_week2_figure_scaffold.py  test_workflow_tool.py
tools/: bootstrap_macos.sh  bootstrap_windows.ps1  setup_student.py
(+167 files in other folders)
